// https://services.gradle.org/distributions - in gradle-wrapper.properties

plugins {
    id 'java'
    id 'application'
    // https://plugins.gradle.org/plugin/org.beryx.jlink
    id("org.beryx.jlink") version "3.0.1"
    // https://plugins.gradle.org/plugin/org.springframework.boot
    id("org.springframework.boot") version "3.3.2"
    // https://plugins.gradle.org/plugin/io.spring.dependency-management
    id("io.spring.dependency-management") version "1.1.6"
    // https://graalvm.github.io/native-build-tools/latest/gradle-plugin.html#_adding_the_plugin
    id 'org.graalvm.buildtools.native' version '0.10.2'
}

group 'com.blck'
version '8.3'

repositories {
    mavenCentral()
    gradlePluginPortal()
}

configurations {
    runtime
    compile
}

graalvmNative {
    binaries {
        main {
            imageName.set("MusicReleaseTracker")
            buildArgs.add('--verbose')
        }
    }
}

java {
    // minimal supported
    sourceCompatibility = JavaVersion.VERSION_19
    // target
    targetCompatibility = JavaVersion.VERSION_21
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
}

application {
    mainModule = 'com.blck.MusicReleaseTracker'
    mainClass = 'com.blck.MusicReleaseTracker.Main'
}

dependencies {

    implementation 'org.xerial:sqlite-jdbc:3.46.0.0'
    implementation 'org.jsoup:jsoup:1.18.1'
    implementation 'com.typesafe:config:1.4.3'

    testImplementation(platform('org.junit:junit-bom:5.10.3'))
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.10.3'
    testImplementation 'org.junit.jupiter:junit-jupiter-engine:5.10.3'
    testImplementation 'org.mockito:mockito-core:5.12.0'
    testImplementation 'org.mockito:mockito-junit-jupiter:5.12.0'

    implementation 'org.springframework.boot:spring-boot-starter-web:3.3.2'
    testImplementation 'org.springframework.boot:spring-boot-starter-test:3.3.2'
}

bootJar {
    duplicatesStrategy = 'exclude'
    archiveFileName = "MRT-${version}-linux-mac.jar"
}

jlink {
    options = ['--strip-debug', '--compress', '2', '--no-header-files', '--no-man-pages']
    launcher {
        name = 'MusicReleaseTracker'
    }
}

sourceSets {
    main {
        resources {
            srcDirs = ['src/main/resources']
        }
    }
}

tasks.jar {
    manifest {
        attributes 'Main-Class': 'com.blck.MusicReleaseTracker.Main'
    }
    duplicatesStrategy = 'exclude'
    from(sourceSets.main.output) {
        exclude 'META-INF/*.SF', 'META-INF/*.DSA', 'META-INF/*.RSA'
    }
    dependsOn configurations.runtimeClasspath
}

test {
    useJUnitPlatform()
    jvmArgs("-XX:+EnableDynamicAgentLoading")
}

